[tool.poetry]
name = "public-services"
version = "2.4"
description = "Public services from Dan Brotsky Consulting"
authors = ["Daniel Brotsky <dev@brotsky.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
fastapi = {version = "*", extras = ["all"]}
uvicorn = "*"
gunicorn = "^20.0"
HALEasy = ">=0.4.3"
aiohttp = "^3.6.2"
aioboto3 = "^8.0.3"
airtable-python-wrapper = ">=0.13.0"
python-dateutil = "^2.8.1"
aioredis = "^1.3.1"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
coverage = "^5.3"
hiredis = "^1.0.1"
redis = "^3.5.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
