[tool.poetry]
name = "public-services"
version = "2.4"
description = "Public services from Dan Brotsky Consulting"
authors = ["Daniel Brotsky <dev@brotsky.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
fastapi = {version = "0.75.0", extras = ["all"]}
uvicorn = { version = "^0.15.0", extras = ["standard"] }
gunicorn = "^20.0"
HALEasy = ">=0.4.3"
aiohttp = "^3.7.4"
aioboto3 = "^9.4.0"
pyAirtable = "*"
python-dateutil = "^2.8.1"
aioredis = "^2.0.1"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
hiredis = "^2.0.0"
redis = "^4.1.4"
black = "^22.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
